--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "./server/server.js",
     "test": "mocha ./server/**/*.test.js"
+  },
+  
+  "engines":{
+    "node":"10.9.0"
   },
   "author": "",
   "license": "ISC",
