--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "start": "node ./server/server.js",
     "test": "mocha ./server/**/*.test.js"
   },
-  
-  "engines":{
-    "node":"10.9.0"
+  "engines": {
+    "node": "10.9.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9"
   },
